Bug 414581 - Autocomplete shows no results for some words, sometimes. r=gavin, b-ff3=beltzner, a1.9b3=mconnor